fix: 회원가입 시 액세스 토큰 발급 삭제
